@@ -306,6 +306,10 @@ document.
   Insert some material in the \LaTeX\ preamble, right before
   \verb!\begin{document}!. See also the control \texttt{(*p}.
 
+\item[\texttt{\mm{}class-options }\textit{options}] ~\par
+
+  Sets the \LaTeX\ document class options; it defaults to \verb!12pt!.
+
 \item[\texttt{\mm{}latex-option }\textit{option}] ~\par
 
   Passes the given option the \LaTeX\ package \texttt{ocamlweb.sty}. 
