@@ -3,6 +3,9 @@
 		      LIST OF CHANGES
 		      ===============
 
+  o symbol | now displayed in math mode; no use of package T1 anymore
+  o option --class-options to set the document class options 
+    (defaults to `12pt')
   o fixed cleaning of temporary files when exiting abnormally
 
 version 1.34, 7/7/2003
